--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -55,19 +55,20 @@
     <section id="instruksjon">
         <h3>Slik sender du inntektsmeldingen</h3>
         <p>
-            Inntektsmeldingen sendes fra arbeidsgivers eget lønn- og personalsystem, eller fra altinn.no.
-            Meldingen inneholder inntektsopplysninger og anne informasjon NAV må ha for å behandle søknaden.
+            Inntektsmeldingen sendes fra arbeidsgivers eget lønns- og personalsystem, eller fra altinn.no. Meldingen
+            inneholder inntektsopplysninger og annen informasjon NAV må ha for å behandle søknaden.
         </p>
 
         <p>
-            Fyll inn periode som samsvarer med arbeidstakers søknad. <strong>{{arbeidstaker_navn}} har søkt pleiepenger for
-            perioden {{periode.fom}} til {{periode.tom}}</strong>
-            Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere meimellom før du sender
+            Fyll inn periode som samsvarer med arbeidstakers søknad. <strong>{{arbeidstaker_navn}} har søkt pleiepenger
+            for perioden {{periode.fom}} til {{periode.tom}}</strong>
+            Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender
             inntektsmeldingen.
         </p>
 
         <p>
-            Du får mer informasjon om inntektsmeldingen på <a href="https://www.nav.no/inntektsmelding" title="Informasjon om inntektsmelding">nav.no/inntektsmelding</a>
+            Du får mer informasjon om inntektsmeldingen på <a href="https://www.nav.no/inntektsmelding"
+                                                              title="Informasjon om inntektsmelding">nav.no/inntektsmelding</a>
         </p>
     </section>
 </div>
