--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -2,82 +2,73 @@
 <html lang="NO">
 
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>Informasjonsbrev til Arbeidsgiver</title>
-    <meta name="subject" content="Informasjonsbrev til Arbeidsgiver"/>
-    <meta name="author" content="nav.no"/>
-    <meta name="description"
-          content="Informasjonsbrev til Arbeidsgiver {{soknad_mottatt_dag}} {{ soknad_mottatt }}"/>
+    <meta name="subject" content="Informasjonsbrev til Arbeidsgiver" />
+    <meta name="author" content="nav.no" />
+    <meta name="description" content="Informasjonsbrev til Arbeidsgiver {{soknad_mottatt_dag}} {{ soknad_mottatt }}" />
     <bookmarks>
-        <bookmark name="Informasjon" href="#informasjon"/>
-        <bookmark name="Instruksjon" href="#instruksjon"/>
+        <bookmark name="Informasjon" href="#informasjon" />
+        <bookmark name="Instruksjon" href="#instruksjon" />
     </bookmarks>
     {{#block 'style-common' }}
     {{/block}}
 </head>
 
 <body>
-<div class="innholdscontainer">
-    <span id="header"></span>
+    <div class="innholdscontainer">
+        <span id="header"></span>
 
-    <section id="informasjon">
-        <h1>Til {{arbeidsgiver_navn}}</h1>
-        <p>
-            NAV har mottatt følgende opplysninger:
-        </p>
-
-        <h3>
-            {{arbeidstaker_navn}} er ansatt hos {{arbeidsgiver_navn}}
-        </h3>
-
-        <h4>
-            Søker om pleiepenger for perioden:
+        <section id="informasjon">
+            <h1>Til {{arbeidsgiver_navn}}</h1>
+            <p>
+                NAV har mottatt følgende opplysninger:<br /><br />
+                <strong>{{arbeidstaker_navn}} er ansatt hos {{arbeidsgiver_navn}}</strong><br /><br />
+                Søker om pleiepenger for perioden:<br />
+            </p>
             <ul>
                 <li>
                     {{periode.fom}} - {{periode.tom}}
                 </li>
             </ul>
-        </h4>
 
-        <div class="alertstripe-info">
-            <div class="alertstripe-info-ikon">
-                <img src="{{image "InformasjonIkon.png" }}" alt="ikon"/>
+            <div class="alertstripe-info">
+                <div class="alertstripe-content">
+                    <div class="alertstripe-info-ikon">
+                        <img src="{{image " InformasjonIkon.png" }}" alt="ikon" />
+                    </div>
+                    <div class="alertstripe-info-tekst">
+                        <p>Vi ber om at inntektsmeldingen blir sendt til oss så snart som mulig.</p>
+                        <p><strong>Det er viktig at du krysser av for at inntektsmeldingen gjelder pleiepenger</strong>.</p>
+                        <p>Hvis inntektsmeldingen allerede er sendt, kan du se bort fra denne meldingen.</p>
+                    </div>
+                </div>
             </div>
-            <div class="alertstripe-info-tekst">
-                <p>Vi ber om at inntektsmeldingen blir sendt til oss så snart som mulig.</p>
-                <p><strong>Det er viktig at du krysser av for at inntektsmeldingen gjelder pleiepenger</strong>.</p>
-                <p>Hvis inntektsmeldingen allerede er sendt, kan du se bort fra denne meldingen.</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
 
-    <section id="instruksjon">
-        <h3>Slik sender du inntektsmeldingen</h3>
-        <p>
-            Inntektsmeldingen sendes fra arbeidsgivers eget lønns- og personalsystem, eller fra altinn.no. Meldingen
-            inneholder inntektsopplysninger og annen informasjon NAV må ha for å behandle søknaden.
-        </p>
+        <section id="instruksjon">
+            <h2>Slik sender du inntektsmeldingen</h2>
+            <p>
+                Inntektsmeldingen sendes fra arbeidsgivers eget lønns- og personalsystem, eller fra altinn.no. Meldingen
+                inneholder inntektsopplysninger og annen informasjon NAV må ha for å behandle søknaden.
+            </p>
+            <p>
+                Fyll inn periode som samsvarer med arbeidstakers søknad.
+                <strong>{{arbeidstaker_navn}}</strong> har søkt pleiepenger for perioden <strong>{{periode.fom}} til {{periode.tom}}</strong>.
+                Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender inntektsmeldingen.
+            </p>
+            <p>
+                Du får mer informasjon om inntektsmeldingen på <a href="https://www.nav.no/inntektsmelding">nav.no/inntektsmelding</a>
+            </p>
+        </section>
+    </div>
 
-        <p>
-            Fyll inn periode som samsvarer med arbeidstakers søknad. <strong>{{arbeidstaker_navn}} har søkt pleiepenger
-            for perioden {{periode.fom}} til {{periode.tom}}</strong>
-            Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender
-            inntektsmeldingen.
-        </p>
-
-        <p>
-            Du får mer informasjon om inntektsmeldingen på <a href="https://www.nav.no/inntektsmelding"
-                                                              title="Informasjon om inntektsmelding">nav.no/inntektsmelding</a>
-        </p>
-    </section>
-</div>
-
-<!-- FOOTER -->
-<p id="footer">
-    <span class="soknadsid">{{ soknad_id }}</span>
-    <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
-</p>
+    <!-- FOOTER -->
+    <p id="footer">
+        <span class="soknadsid">{{ soknad_id }}</span>
+        <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
+    </p>
 </body>
 
 </html>
