--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -33,9 +33,16 @@
             </ul>
 
             <div class="alertstripe-info">
-                <p>Vi ber om at inntektsmeldingen blir sendt til oss så snart som mulig.</p>
-                <p><strong>Det er viktig at du krysser av for at inntektsmeldingen gjelder pleiepenger</strong>.</p>
-                <p>Hvis inntektsmeldingen allerede er sendt, kan du se bort fra denne meldingen.</p>
+                <div class="alertstripe-content">
+                    <div class="alertstripe-info-ikon">
+                        <img src="{{image "InformasjonIkon.png" }}" alt="ikon" />
+                    </div>
+                    <div class="alertstripe-info-tekst">
+                        <p>Vi ber om at inntektsmeldingen blir sendt til oss så snart som mulig.</p>
+                        <p><strong>Det er viktig at du krysser av for at inntektsmeldingen gjelder pleiepenger</strong>.</p>
+                        <p>Hvis inntektsmeldingen allerede er sendt, kan du se bort fra denne meldingen.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
