--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -66,7 +66,7 @@
 
     <!-- FOOTER -->
     <p id="footer">
-        <span class="soknadsid">{{ soknad_id }}</span>
+        <span class="tidspunkt">{{ tidspunkt }}</span>
         <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
     </p>
 </body>
