Justerer tittel og innhold på bekreftelse til arbeidsgiver.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Informasjonsbrev til Arbeidsgiver</title>
+    <title>Bekreftelse til Arbeidsgiver</title>
     <meta name="subject" content="Informasjonsbrev til Arbeidsgiver" />
     <meta name="author" content="nav.no" />
-    <meta name="description" content="Informasjonsbrev til Arbeidsgiver {{soknad_mottatt_dag}} {{ soknad_mottatt }}" />
+    <meta name="description" content="Bekreftelse til Arbeidsgiver {{soknad_mottatt_dag}} {{ soknad_mottatt }}" />
     <bookmarks>
         <bookmark name="Informasjon" href="#informasjon" />
         <bookmark name="Instruksjon" href="#instruksjon" />
@@ -42,8 +42,6 @@
             </p>
             <p>
                 Fyll inn periode som samsvarer med arbeidstakers søknad.
-                <strong>{{arbeidstaker_navn}}</strong> har søkt pleiepenger for perioden <strong>{{periode.fom}} til
-                    {{periode.tom}}</strong>.
                 Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender
                 inntektsmeldingen.
             </p>
