--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -29,7 +29,7 @@
             </ul>
 
             <p>I den forbindelse ber vi om at inntektsmeldingen blir sendt til oss så snart som mulig. Husk å krysse
-                av for at inntektsmeldingen gjelder pleiepenger. Hvis inntektsmeldingen allerede er sendt, kan du se
+                av for at inntektsmeldingen gjelder pleiepenger sykt barn. Hvis inntektsmeldingen allerede er sendt, kan du se
                 bort fra denne meldingen.</p>
         </section>
 
@@ -41,7 +41,7 @@
                 inneholder inntektsopplysninger og annen informasjon NAV må ha for å behandle søknaden.
             </p>
             <p>
-                Fyll inn periode som samsvarer med arbeidstakers søknad.
+                Fyll inn startdato som samsvarer med arbeidstakers søknad.
                 Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender
                 inntektsmeldingen.
             </p>
