Tekstendringer - bekreftelse til arbeidsgiver
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver.hbs
@@ -28,26 +28,31 @@
                 </li>
             </ul>
 
-            <p>I den forbindelse ber vi om at inntektsmeldingen blir sendt til oss så snart som mulig. Husk å krysse
-                av for at inntektsmeldingen gjelder pleiepenger sykt barn. Hvis inntektsmeldingen allerede er sendt, kan du se
-                bort fra denne meldingen.</p>
+            <p>
+                Hvis dette er første søknad eller en ny søknad etter et opphold i pleiepenger på 4
+                uker eller mer, skal du som arbeidsgiver sende inntektsmelding til NAV.
+                Inntektsmeldingen skal sendes så snart som mulig etter at den ansatte har sendt
+                inn søknaden sin, men kan ikke sendes inn tidligere enn 4 uker før første dag
+                med pleiepenger.
+                <br/><br/>
+                Hvis søknaden gjelder en forlengelse av en pleiepengeperiode, der oppholdet er
+                mindre enn 4 uker fra sist, trenger vi ikke ny inntektsmelding.
+            </p>
         </section>
 
-
         <section id="instruksjon">
-            <h2>Slik sender du inntektsmeldingen</h2>
+            <p><strong>Dette må du passe på når du sender inntektsmelding:</strong></p>
+            <ul>
+                <li>Startdatoen må samsvare med startdatoen på søknaden fra den ansatte.</li>
+                <li>
+                    Hvis den ansatte har flere arbeidsforhold/stillinger hos dere, må du sørge
+                    for at du fyller ut riktig arbeidsforholdsID.
+                </li>
+            </ul>
+
             <p>
-                Inntektsmeldingen sendes fra arbeidsgivers eget lønns- og personalsystem, eller fra altinn.no. Meldingen
-                inneholder inntektsopplysninger og annen informasjon NAV må ha for å behandle søknaden.
-            </p>
-            <p>
-                Fyll inn startdato som samsvarer med arbeidstakers søknad.
-                Hvis datoene ikke stemmer med hva dere har avtalt, må dere avklare dette dere imellom før du sender
-                inntektsmeldingen.
-            </p>
-            <p>
-                Du får mer informasjon om inntektsmeldingen på <a
-                    href="https://www.nav.no/inntektsmelding">nav.no/inntektsmelding</a>
+                Inntektsmeldingen sendes fra arbeidsgivers eget lønns- og personalsystem, eller
+                fra altinn.no. Du får mer informasjon om inntektsmeldingen på  <a href="https://www.nav.no/inntektsmelding">nav.no/inntektsmelding</a>
             </p>
         </section>
     </div>
