Fjern info om varsel via Altinn i informasjonsbrev til arbeidsgiver på nav.no

--- a/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver-nav-no.hbs
+++ b/src/main/resources/handlebars/informasjonsbrev-til-arbeidsgiver-nav-no.hbs
@@ -29,7 +29,7 @@
         </ul>
 
         <p>
-            Hvis vi trenger inntektsmelding for å behandle søknaden, vil du få varsel om dette via Altinn og på
+            Hvis vi trenger inntektsmelding for å behandle søknaden, vil du få varsel om dette på
             Min side – arbeidsgiver på nav.no. Du kan da logge inn på nav.no for å sende inn en forhåndsutfylt
             inntektsmelding.
         </p>
